# FBX-glTF-conv

./: CMakeLists.txt  README.md
.github/workflows/: Release.yml  Test.yml
CI/: build.sh
Cli/: CMakeLists.txt  ReadCliArgs.cpp
Cli/Test/: ReadCliArgs.cpp
Core/: CMakeLists.txt
Core/Source/bee/: BEE_API.h
Core/Source/bee/Convert/: AnimationUtility.h
Core/Test/: Animation.cpp
publish/: package-lock.json  package.json
